src/test/testFiles/valid/lists.manimdsl
let a = List<number>();
let y = a.size();
a.append(1);
let b = List<number>();

b.prepend(10);
